# Find-Friend

./: .dockerignore.example  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_23_2042-640ec69b3dc5_.py  2025_01_23_2102-46366fb01814_.py  2025_02_01_1322-84fdfe75ea85_.py  2025_02_01_1327-5e34125e564c_.py  2025_02_08_1342-3a3d0e159292_.py  2025_02_21_1839-a58c53e531e0_.py  2025_03_05_2059-0ec7430687dc_.py  2025_03_06_2024-82e357d453d2_.py  2025_03_09_2103-88b2747421a5_.py
app/: main.py
app/backend/: __init__.py  get_all_users_data.py  get_last_username.py  login.py  save_data.py  save_questionnaire_user_data.py  submit_password.py
app/core/: __init__.py  config.py
app/core/models/: __init__.py  auth.py  contacts.py  users.py
app/frontend/: __init__.py  auth_denied.py  change_name.py  homepage.py  login_with_name.py  password_entering.py  questionnaire.py  settings.py  settings_page.py  showing_questionnaires.py  submit_name.py
app/google_auth/: __init__.py  routs.py
