[project]
name = "find-friend"
version = "0.1.0"
description = ""
authors = [
    {name = "Макс",email = "rumyantsev1m0s1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastui (>=0.7.0,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]
# pip install poetry
# poetry add fastapi uvicorn[standart] orjson pydantic pydantic-settings sqlalchemy[asyncio] alembic asyncpg python-multipart

# .gitignore
# /venv/
# /.idea/
# .env

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
