[tool.poetry]
name = "find-friend"
version = "0.1.0"
description = ""
authors = ["Макс <rumyantsev1m0s1@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastui (>=0.7.0,<0.8.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "authlib (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pydantic (==2.9.2)",
    "bcrypt (>=4.2.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
