[tool.poetry]
name = "find-friend"
version = "0.1.0"
description = ""
authors = ["Макс <rumyantsev1m0s1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
orjson = "^3.10.15"
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
asyncpg = "^0.30.0"
fastui = "^0.7.0"
python-multipart = "^0.0.20"
authlib = "^1.4.0"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
pydantic = "2.9.2"
bcrypt = "^4.2.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 80"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
